--- a/stafford-olympics/package.json
+++ b/stafford-olympics/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuexfire": "^3.2.5"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.14",
